--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Я впервые разместил свой код на удаленном репозитории</h1>
     <h2>Hello</h2>
-    <h3>Изменения</h3>
+    <h2>Изменения</h2>
+    <h3>Заголовок</h3>
 </body>
 </html>
